adding parent's guide to website

--- a/website/index.html
+++ b/website/index.html
@@ -83,7 +83,7 @@
                     <a class="page-scroll" href="#video">Video</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#parentsguide">Parent's Guide</a>
+                    <a class="page-scroll" href="parentsguide.html">Parent's Guide</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="#games">Games</a>
