More website updates

--- a/website/index.html
+++ b/website/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
 
+    <link rel="stylesheet" href="littlefamily.css">
+
     <link rel="shortcut icon" type="image/png" href="littlefamilytree_icon_small.png" />
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -21,39 +23,9 @@
     <![endif]-->
 
     <style type="text/css">
-        header {
-            display: block;
-            margin-top: 100px;
-            min-height: 500px;
-        }
-        section {
-            margin-top: 50px;
-            min-height: 500px;
-        }
-        .navbar-toggle {
-            float: left;
-        }
-        .navbar .icon {
-            float: left;
-        }
-        .navbar-brand {
-            line-height: 48px;
-            padding-top: 0px;
-        }
-        .header-content {
-            margin-top: 50px;
-            padding: 20px;
-            margin-bottom: 50px;
-        }
-        .main-icon {
-            margin-bottom: 20px;
-        }
         .beta {
             font-weight: bold;
             color: green;
-        }
-        .bg-dark {
-            background-color: darkblue;
         }
     </style>
 </head>
@@ -98,12 +70,13 @@
     <!-- /.container-fluid -->
 </nav>
 
-<header id="page-top">
+<header class="content-start" id="page-top">
     <div class="header-content">
         <div class="header-content-inner container-fluid">
             <div class="row">
                 <div class="col-sm-5 text-center">
                     <img class="main-icon" src="little_family_logo.png" border="0" />
+                    <p>&nbsp;</p>
                     <p class="beta">
                         Little Family Tree is currently in beta.
                     </p>
@@ -147,6 +120,7 @@
 </header>
 
 <section class="bg-primary" id="video">
+    <a href="#page-top" class="page-scroll to-top" title="back to top"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span></a>
     <div class="container">
         <div class="row">
             <div class="col-md-6 text-center">
@@ -161,21 +135,140 @@
     </div>
 </section>
 
-<section id="about">
+<section id="games">
+    <a href="#page-top" class="page-scroll to-top" title="back to top"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span></a>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2 text-center">
+                <h2 class="section-heading">Games!</h2>
+                <hr class="primary">
+                <p>Learn about the different games included in Little Family Tree.<br />Read the <a href="parentsguide.html">Parent's Guide</a> for more information about how adults can make the games more fun.</p>
+                <p>&nbsp;</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-3 col-sm-6">
+                <a href="#" class="portfolio-box">
+                    <img src="house_adult_wardrobe.png" class="img-responsive" alt="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-name">
+                                Heritage Dress Up
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-6">
+                <a href="#" class="portfolio-box">
+                    <img src="house_adult_wardrobe.png" class="img-responsive" alt="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-name">
+                                Picture Puzzle
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-6">
+                <a href="#" class="portfolio-box">
+                    <img src="house_adult_wardrobe.png" class="img-responsive" alt="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-name">
+                                Water Coloring
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-6">
+                <a href="#" class="portfolio-box">
+                    <img src="house_adult_wardrobe.png" class="img-responsive" alt="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-name">
+                                Scratch Off
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-6">
+                <a href="#" class="portfolio-box">
+                    <img src="house_adult_wardrobe.png" class="img-responsive" alt="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-name">
+                                Photo Matching
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-6">
+                <a href="#" class="portfolio-box">
+                    <img src="house_adult_wardrobe.png" class="img-responsive" alt="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-name">
+                                Bubbles
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-6">
+                <a href="#" class="portfolio-box">
+                    <img src="house_adult_wardrobe.png" class="img-responsive" alt="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-name">
+                                Tree Find Game
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="bg-info" id="about">
+    <a href="#page-top" class="page-scroll to-top" title="back to top"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span></a>
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
-                <h2 class="section-heading">Let's Get In Touch!</h2>
+                <h2 class="section-heading">About Little Family Tree</h2>
                 <hr class="primary">
-                <p>Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
+                <p>Little Family Tree is a product of <a href="http://www.yellowforktech.com">Yellow Fork Technologies LLC</a></p>
+                <p>Your privacy is extremely important to us.  We promise not to share your personal information.
+                    <br /><a href="privacy.html">Read our full privacy policy.</a></p>
+                <p>&nbsp;</p>
             </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2 text-center">
+                <h3>Contact Us</h3>
+            </div>
+        </div>
+        <div class="row">
             <div class="col-lg-4 col-lg-offset-2 text-center">
-                <i class="fa fa-phone fa-3x wow bounceIn"></i>
-                <p>123-456-6789</p>
+                <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
+                <p><a href="javascript:;" onclick="showContactForm(); return false;">Contact and Feedback Form</a></p>
             </div>
             <div class="col-lg-4 text-center">
-                <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-                <p><a href="mailto:your-email@your-domain.com">feedback@startbootstrap.com</a></p>
+                <i class="fa fa-phone fa-3x wow bounceIn"></i>
+                <p>Yellow Fork Technologies LLC
+                <br />5526 W. 13400 S. #448
+                <br />Herriman, UT  84096</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2 text-center">
+                <p>&nbsp;</p>
+                <p>&copy; 2015 Yellow Fork Technologies LLC</p>
             </div>
         </div>
     </div>
