--- a/website/parentsguide.html
+++ b/website/parentsguide.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
 
+    <link rel="stylesheet" href="littlefamily.css">
+
     <link rel="shortcut icon" type="image/png" href="littlefamilytree_icon_small.png" />
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -25,7 +27,7 @@
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
-            <a class="navbar-brand page-scroll" href="index.html#page-top">
+            <a class="navbar-brand page-scroll" href="index.html">
                 <img class="icon" src="littlefamilytree_icon_small.png" border="0" />
                 <!-- Little Family Tree -->
             </a>
@@ -43,10 +45,11 @@
             <ul class="nav navbar-nav navbar-left">
 
                 <li>
-                    <a class="page-scroll" href="index.html#video">Video</a>
+                    <a class="page-scroll" href="index.html">Home</a>
                 </li>
+
                 <li>
-                    <a class="page-scroll" href="parentsguide.html">Parent's Guide</a>
+                    <a class="page-scroll" href="index.html#video">Video</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="index.html#games">Games</a>
@@ -61,7 +64,9 @@
     <!-- /.container-fluid -->
 </nav>
 
+<div class="content-start container">
 
+</div>
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
