More website updates

--- a/website/parentsguide.html
+++ b/website/parentsguide.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Little Family Tree</title>
+    <title>Little Family Tree - Parent's Guide</title>
 
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
@@ -21,6 +21,19 @@
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <style>
+        .row {
+            margin-bottom: 20px;
+        }
+        .guide-image {
+            width: 100%;
+            max-height: 300px;
+            max-width: 300px;
+        }
+        .star {
+            position: absolute;
+        }
+    </style>
 </head>
 <body>
 <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
@@ -28,7 +41,7 @@
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
             <a class="navbar-brand page-scroll" href="index.html">
-                <img class="icon" src="littlefamilytree_icon_small.png" border="0" />
+                <img class="icon" src="home.png" border="0" height="45" />
                 <!-- Little Family Tree -->
             </a>
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -65,7 +78,161 @@
 </nav>
 
 <div class="content-start container">
+    <div class="row">
+        <div class="col-lg-8 col-lg-offset-2 text-center">
+            <h2 class="section-heading">Parent's Guide</h2>
+            <hr class="primary">
+            <p>&nbsp;</p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-8 col-lg-offset-1">
+            <h3>Welcome!</h3>
+            <p>
+                Little Family Tree engages toddlers and pre-school children with their personal family history through photos,
+                games, and activities designed for their level. (Most of the games are fun for the kid in all of us.)
+            </p>
+            <p>
+                Because it is designed for specially for pre-school children, there is very little
+                text used in the game.  Eveything is identified by icons and pictures.  The game
+                also uses a lot of audio cues to guide the player.  <strong>Turn UP the
+                volume</strong> on your device so that your child can hear the audio cues.
+            </p>
+            <p>
+                Playing with Little Family Tree will help children learn to:
+                <ol>
+                    <li>Identify family members by name, relationship, and picture</li>
+                    <li>Understand who and where they come from</li>
+                    <li>Recognize and navigate a family tree</li>
+                </ol>
+            </p>
+        </div>
+        <div class="col-sm-2 text-center">
+            <img class="guide-image" src="little_family_logo.png" />
+        </div>
+    </div>
 
+    <div class="row">
+        <div class="col-sm-8 col-lg-offset-1">
+            <h3>More Photos, More Fun!</h3>
+            <p>
+                The more information--especially photos--that you add to your online family tree,
+                the more fun Little Family Tree will be for your child!  Take a few moments to
+                review the photos and data in your online family tree to give your child a unique
+                and engaging experience with their heritage.
+            </p>
+            <p>
+                Data from your online family tree is loaded in the background over WiFi while your
+                child plays.  As more data is loaded, more of your child's unique heritage is
+                available for them to engage with and learn about.
+                The parameters for loading data in the background can be managed via the app
+                settings.
+            </p>
+        </div>
+        <div class="col-sm-2 text-center">
+            <img class="guide-image" src="guide_full_tree.png" />
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-sm-8 col-lg-offset-1">
+            <h3>Play Together!</h3>
+            <p>
+                Playing with your child will give you the opportunity to strengthen family
+                associations in your child's mind.  You will also have the opportunity to
+                enhance the experience through your own personal memories and stories.
+            </p>
+            <p>
+                Take time to tell a fun story about a picture that is uncovered in the game.  Or
+                tell your child your earliest memories of someone in the game.
+            </p>
+        </div>
+        <div class="col-sm-2 text-center">
+
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-sm-8 col-lg-offset-1">
+            <h3>Choosing a Player</h3>
+            <p>
+                The games and activities in Little Family Tree are centered around the person who
+                is playing. When you start the game, you will be asked to choose the person who
+                will be the main player.  The people available to choose from your taken directly
+                from your close relatives in your online family tree.
+            </p>
+            <p>
+                Little Family Tree will focus the games around the selected child so that the
+                pictures chosen and relationships spoken are relative to that person.
+            </p>
+            <p>
+                You may choose a different player at any time by using the back button or tapping
+                the player's profile picture on the activity screens.
+            </p>
+        </div>
+        <div class="col-sm-2 text-center">
+            <img class="guide-image" src="guide_choose.png" />
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-sm-8 col-lg-offset-1">
+            <h3>Home Activity</h3>
+            <p>
+                The home is the hub of the game.  It is designed to be inviting and engaging for
+                your child. If something looks interesting, simply touch it to see what happens.
+                Most children find the touch interface inuitive and natural but you may need to help
+                younger toddlers to get started.
+            </p>
+            <p>
+                Return to the home at anytime by touching the home button at the top of every screen.
+            </p>
+        </div>
+        <div class="col-sm-2 text-center">
+            <img class="guide-image" src="home.png" />
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-sm-8 col-lg-offset-1">
+            <h3>Follow the Stars!</h3>
+            <p>
+                Special games and activities are highlighted by stars on the home screen.  The stars
+                will show up randomly.  Follow the stars to interact in fun and unique ways with
+                your heritage.
+            </p>
+            <p>
+                Visit the <a href="index.html#games">Games</a> section of this site to learn more
+                about individual games.
+            </p>
+        </div>
+        <div class="col-sm-2 text-center" style="position: relative;">
+            <img class="star" src="star1.png" />
+            <img class="star" src="star1.png" />
+            <img class="star" src="star1.png" />
+            <img class="star" src="star1.png" />
+            <img class="star" src="star1.png" />
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-8 col-lg-offset-1">
+            <h3>Settings</h3>
+            <p>
+                Parents may alter app settings through the manage settings button found on any
+                screen.  You must enter the password for your online tree account in order to
+                access the settings.  This prevents children from accidentally changing the settings.
+            </p>
+            <p>
+                From the settings you can manage your connection to your online family tree and
+                change synchronization settings.  You can also choose to hide people from your
+                online tree so that they do not show up in Little Family Tree.  You can also
+                return to this parent's guide at anytime from the settings screen.
+            </p>
+        </div>
+        <div class="col-sm-2 text-center">
+
+        </div>
+    </div>
 </div>
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
@@ -77,6 +244,10 @@
 <script src="jquery.easing.min.js"></script>
 
 <script>
+    function randomNumber(max) {
+        return Math.floor((Math.random() * max));
+    }
+
     $(document).ready(function() {
         // jQuery for page scrolling feature - requires jQuery Easing plugin
         $('a.page-scroll').bind('click', function(event) {
@@ -86,6 +257,40 @@
             }, 1250, 'easeInOutExpo');
             event.preventDefault();
         });
+
+        var x = 0;
+        $('.star').each(function() {
+            $(this).css('top', randomNumber(40));
+            $(this).css('left', x + randomNumber(25));
+            $(this).css('width', 10 + randomNumber(30));
+            $(this).data("growing", true);
+            $(this).data("x", $(this).position().left);
+            $(this).data("y", $(this).position().top);
+            x+=40;
+        });
+
+        window.setInterval(function() {
+            $('.star').each(function() {
+                var star = $(this);
+                var w = star.width();
+                if (star.data('growing')) {
+                    w++;
+                    if (w > 40) {
+                        w = 39;
+                        star.data('growing', false);
+                    }
+                } else {
+                    w--;
+                    if (w < 15) {
+                        w = 16;
+                        star.data('growing', true);
+                    }
+                }
+                star.css('width', w);
+                //star.css('left', Math.floor(star.data("x") - w/2));
+                //star.css('top', Math.floor(star.data("y") - w/2));
+            });
+        }, 50);
     });
 </script>
 </body>
