--- a/website/privacy.html
+++ b/website/privacy.html
@@ -30,7 +30,7 @@
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
             <a class="navbar-brand page-scroll" href="index.html">
-                <img class="icon" src="littlefamilytree_icon_small.png" border="0"/>
+                <img class="icon" src="home.png" border="0" height="45" />
                 <!-- Little Family Tree -->
             </a>
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
