Adding ability to open fridge and freezer

--- a/website/index.html
+++ b/website/index.html
@@ -85,7 +85,7 @@
                         for information about participating in the beta program.
                     </p>
                     <p>
-                        <a href="https://play.google.com/store/apps/details?id=com.yellowforktech.littlefamilytreefree">
+                        <a href="https://play.google.com/store/apps/details?id=com.yellowforktech.littlefamilytree">
                             <img alt="Android app on Google Play"
                                  src="https://developer.android.com/images/brand/en_app_rgb_wo_60.png" />
                         </a>
